2020-10-10  jmerelo  <jmerelo@princess-carolyn>

	* lib/Test/Text.pm: 0.6.4 includes multi-line markdown links.

2020-09-21  jmerelo  <jmerelo@princess-carolyn>

	* lib/Test/Text.pm: Changes again so that it can be called with or without calling done_testing.

2020-09-21  jmerelo  <jmerelo@jjmerelo-System-Product-Name>

	* lib/Test/Text.pm: New version eliminates done_testing from the check; this will break a few things, I'm afraid... 
	Adde optional done_testing with a 4th argument to just_check. It's on by default, can be turned off.

2019-10-31  Juan J. merelo  <jmerelo@penny>

	* lib/Test/Text.pm: Latest version includes Text::Sentence (taken from HTML::Summary) to avoid installation of all dependencies in that module.

2017-07-28  Juan J. merelo  <jmerelo@penny>

	* lib/Test/Text.pm: Shows correctly (apparently) utf-8 encoded characters.

2016-04-20  Juan J. merelo  <jmerelo@penny>

	* lib/Test/Text.pm: Strips code from markdown to avoid getting
	bogged down by it. 

2015-12-20  Juan J. merelo  <jmerelo@penny>

	* lib/Test/Text.pm (check): Strips URL to avoid oh so many
	non-dict words to creep up in the text. 

2014-08-16  JJ Merelo  <jmerelo@amy>

	* lib/Test/Text.pm: Many patches from Gabor Szabo and eliminated File::Slurp dependency. Also suppressed legacy "uses"

2014-08-13  JJ Merelo  <jmerelo@amy>

	* t/02.just_check.t: Added this since it's got an independent done_testing

	* lib/Test/Text.pm (just_check): Finished tests and changed encoding for test script.

2014-08-12  JJ Merelo  <jmerelo@amy>

	* lib/Test/Text.pm (check): Adds more strict extraction of words
	to avoid some Spanish sigils; changes tests to account for that.
	(check): getting rid of old regexes and using proper Unicode for version 0.1.5

2014-08-11  JJ Merelo  <jmerelo@amy>

	* lib/Test/Text.pm: Adds a few Spanish symbols to avoid UTF8 errors and corrects the Spanish affix file to avoid warnings. 

2014-08-10  JJ Merelo  <jmerelo@amy>
