@@ -1,6 +1,6 @@
 requires 'Test::More';
 requires 'version';
-requires 'File::Slurp::Tiny';
+requires 'Path::Tiny', '0.111';
 requires 'Text::Hunspell';
 requires 'Encode';
 requires 'Test::Simple', '>=1.0'; #base class 
