@@ -1,3 +1,7 @@
+2020-10-??  jmerelo  <jmerelo@princess-carolyn>
+
+    * switch from File::Slurp::Tiny to Path::Tiny
+
 2020-10-10  jmerelo  <jmerelo@princess-carolyn>
 
 	* lib/Test/Text.pm: 0.6.4 includes multi-line markdown links.
